@@ -282,3 +282,4 @@
  16-Dec-2020  V1.649 Add hydrogen atom counts -
  28-Dec-2020  V1.650 Corrections to indexing in multiprocessing RepoScanUtils(), fix CLI test cases
   6-Jan-2021  V1.651 Enumeration updates for selected polymer types.
+  8-Jan-2021  V1.652 Add mongodb distinct() method.
